eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Solicitor_Fields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <label>Display Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YesNo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ShowYesNo</label>
        <type>Checkbox</type>
    </fields>
    <label>Solicitor Fields</label>
</CustomObject>